fix: update footer padding for consistent spacing

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,7 +1,7 @@
 footer {
   background-color: rgba(28, 28, 28, 1);
   height: auto;
-  padding-bottom: 48px;
+  padding: 24px 0; 
 
   .content-width {
     display: flex;
